--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand" href="#"><img class="headsethead" src="./headseT (2).png" alt=""></a>
+            <a class="navbar-brand" href="#"><img class="headsethead" src="./Images/headseT (2).png" alt=""></a>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
@@ -56,7 +56,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <img src="HS-Podcast-logo.png" class="HS-Podcast-logo" alt="">
+                <img src="./Images/HS-Podcast-logo.png" class="HS-Podcast-logo" alt="">
             </div>
             <div class="col-md-6 hspt">
                 <h4 style="color: #FF0000; font-weight: bold;">HEADSET SPORTS PODCAST</h4>
@@ -80,16 +80,16 @@
         <div class="row">
             <div class="col-md-2 col-sm-2 col-2"></div>
             <div class="col-md-2 col-sm-2 col-2">
-                <img class="podLogos" src="./app-icon-logo.png" alt="">
+                <img class="podLogos" src="./Images/app-icon-logo.png" alt="">
             </div>
             <div class="col-md-2 col-sm-2 col-2">
-                <img class="podLogos" src="./Google_Podcasts_Logo.png" alt="">
+                <img class="podLogos" src="./Images/Google_Podcasts_Logo.png" alt="">
             </div>
             <div class="col-md-2 col-sm-2 col-2">
-                <img class="podLogos" src="./Podbean.jpg" alt="">
+                <img class="podLogos" src="./Images/Podbean.jpg" alt="">
             </div>
             <div class="col-md-2 col-sm-2 col-2">
-                <img class="podLogos" src="./Apple-Podcasts (2).png" alt="">
+                <img class="podLogos" src="./Images/Apple-Podcasts (2).png" alt="">
             </div>
             <div class="col-md-2 col-sm-2 col-2"></div>
         </div>
@@ -111,7 +111,7 @@
     <div class="container-fluid footerCon">
         <div class="row footer">
             <div class="col-md-6">
-                <img src="./headseT (2).png" class="headsetimg " alt="">
+                <img src="./Images/headseT (2).png" class="headsetimg " alt="">
             </div>
             <div class="col-md-6">
                 <i class="fab fa-twitter footer-icons"></i>
